ACLOCAL_AMFLAGS = -I m4 --install

EXTRA_DIST = \
	AUTHORS \
	BUGS \
	COPYING \
	ChangeLog \
	INSTALL \
	autogen.sh

SUBDIRS = src

DIST_SUBDIRS = src

MOSTLYCLEANFILES=
CLEANFILES=
DISTCLEANFILES = Makefile autom4te.cache/* .deps config.status config.log *~
MAINTAINERCLEANFILES = config.h.in INSTALL depcomp ltmain.sh missing m4/libtool.m4 m4/ltoptions.m4 m4/ltsugar.m4 m4/ltversion.m4 m4/lt~obsolete.m4 aclocal.m4 install-sh config.guess gmon.out Makefile.in configure
